(library
 (name rtop_vanilla)
 (modules reason_util reason_toploop)
 (wrapped false)
 (modes byte)
 (libraries
  menhirLib
  reason.easy_format
  reason
  findlib
  reason.ocaml-migrate-parsetree))

(rule
 (targets reason_toploop.ml)
 (deps reason_toploop.cppo.ml)
 (action
  (run cppo -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(executable
 (name rtop_vanilla)
 (public_name rtop-vanilla)
 (package rtop)
 (modules rtop_vanilla)
 (link_flags -linkall)
 (modes byte)
 (libraries
   compiler-libs.toplevel
   findlib.top
   rtop_vanilla))
